[gd_scene load_steps=2 format=3 uid="uid://ccbr5gjhlqkux"]

[ext_resource type="Script" path="res://scripts/prepitch_field_overlay.gd" id="1_sxyml"]

[node name="PitcherFieldOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxyml")

[node name="Pitcher" type="Control" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -94.0
offset_right = 88.0
grow_vertical = 0

[node name="Background" type="ColorRect" parent="Pitcher"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.27451, 0.27451, 0.439216)

[node name="MarginContainer" type="MarginContainer" parent="Pitcher"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Pitcher/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Line1" type="Label" parent="Pitcher/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Line 1"

[node name="Line2" type="Label" parent="Pitcher/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Line 2"

[node name="Line3" type="Label" parent="Pitcher/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Line 3"

[node name="Batter" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -106.0
offset_top = -104.0
grow_horizontal = 0
grow_vertical = 0

[node name="Background" type="ColorRect" parent="Batter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0.27451, 0.27451, 0.439216)

[node name="MarginContainer" type="MarginContainer" parent="Batter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Batter/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Line1" type="Label" parent="Batter/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Line 1"
horizontal_alignment = 2

[node name="Line2" type="Label" parent="Batter/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Line 2"
horizontal_alignment = 2

[node name="Line3" type="Label" parent="Batter/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Line 3"
horizontal_alignment = 2
